<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.magic.udacitylist.MainActivity"
    android:weightSum="1">


    <TextView
        android:text="@string/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/tv_title"
        android:layout_weight="0.04"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:text="@string/btn_Movie"
        android:id="@+id/btn_Movie"
        style="@style/btnStyle" />

    <Button
        android:text="@string/btn_Hawk"
        android:id="@+id/btn_Hawk"
        style="@style/btnStyle" />

    <Button
        android:text="@string/btn_Build"
        android:id="@+id/btn_Build"
        style="@style/btnStyle"/>

    <Button
        android:text="MAKE YOUR APP METRIAL"
        android:id="@+id/btn_Metrial"
        style="@style/btnStyle" />

    <Button
        android:text="@string/btn_Ubiquitous"
        android:id="@+id/btn_Ubiquitous"
        style="@style/btnStyle"/>

    <Button
        android:text="@string/btn_Cap"
        android:id="@+id/btn_Cap"
        style="@style/btnStyle"
        />

</LinearLayout>
